# Notebooks

./: .auto_import_cache.json  .book_speaker_bookmark.json  AAA-counters.txt  Notebooks.code-workspace  README.md  aaa.txt  aasuggest.md  ai.ipynb  ascii-art.txt  backup_notebooks.sh  bash.ipynb  calibre.ipynb  card-cutter.ipynb  crew.ipynb  export_markdown_to_pdf.py  github-ide-workflow.md  jupyterlab.ipynb  links-ipynb.sh  main.py  markdown_instructions_and_example.md  notebooks.html  notebooks.ipynb  plan-page37CounterOcr.prompt.md  pyproject.toml  python.ipynb  skills-list.txt  skills_reference.txt  startup-create.sh  startup-template.txt  startup.txt  travellermap.ipynb  vtt.ipynb
.ipynb_checkpoints/: README-checkpoint.md  Startup-checkpoint.md  bash-checkpoint.ipynb  calibre-checkpoint.ipynb  card-cutter-checkpoint.ipynb  config-checkpoint.json  crew-checkpoint.ipynb  jupyterlab-checkpoint.ipynb  links-checkpoint.sh  links-create-checkpoint.sh  links-ipynb-checkpoint.sh  notebooks-checkpoint.ipynb  python-checkpoint.ipynb  startup-checkpoint.txt  travellermap-checkpoint.ipynb
.jupyter/: migrated
AI/: README.md  ai.html  ai.ipynb  auto_update_markdown.sh  github-ide-workflow.md  main.py  pyproject.toml  startup.txt
BASH/: Pipfile  README.md  bash.html  bash.ipynb  bash_commands.txt  main.py  pyproject.toml  startup.txt
CALIBRE/: Pipfile  README.md  calibre.html  calibre.ipynb  main.py  pyproject.toml  startup.txt
CARDCUTTER/: README.md  card-cutter.html  card-cutter.ipynb  main.py  pyproject.toml  startup.txt
CREW/: .auto_import_cache.json  .env.example  (+10 more)
(+6914 files in other folders)
