[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.4,<5",
]

[tool.uv.workspace]
members = [
    "AI",
    "BASH",
    "CALIBRE",
    "CARDCUTTER",
    "CREW",
    "JUPYTERLAB",
    "PYTHON",
]
